# placeholder

./: .gitignore  Cargo.toml  README.md  build.rs
ferride_core/: Cargo.toml
ferride_core/src/: lib.rs
ferride_core/src/game/: entity.rs  mod.rs  scene.rs
ferride_core/src/manager_application/: buffer.rs  event_manager.rs  mod.rs
polygon/: Cargo.toml  shader.wgsl
polygon/src/: main.rs  polygon.rs  simple_polygon.rs  sos.rs
res/images/spriteSheets/: protagonist.xcf
res/shader/: font.wgsl  shader.wgsl  texture_array.wgsl  transition.wgsl  ui_texture.wgsl
src/: animation.rs  background.rs  battle_action.rs  battle_manager.rs  color.rs  enemy.rs  event.rs  game.rs  game_logic.rs  game_state.rs  graphics_provider.rs  lib.rs  main.rs  manager_application.rs  player.rs  static_camera.rs  text.rs  transition.rs  vertex.rs
src/character/: ki.rs  mod.rs  skilled_character.rs
src/character/skilled_character/: mod.rs  ui.rs
src/character/skills/: attack_skill.rs  heal_skill.rs  mod.rs
src/dungeon/: mod.rs
src/entities/: background.rs  battle_manager.rs  enemy.rs  mod.rs  player.rs  transition.rs
src/game/: bounding_box.rs  camera.rs  entity.rs  game_event.rs  mod.rs  ressource_descriptor.rs  scene.rs  sprite.rs  sprite_sheet.rs  velocity_controller.rs  vertex.rs
src/game_state/: battle_state.rs  mod.rs  ui_state.rs
src/graphics_provider/: buffer_primitives.rs  buffer_writer.rs  mod.rs  render_scene.rs  shader_descriptor.rs  surface.rs
src/graphics_provider/surface/: buffer_writer.rs  render_scene.rs
src/graphics_provider/texture/: mod.rs
src/manager_application/: event_manager.rs  mod.rs  window_descriptor.rs  window_manager.rs
src/text/: font_manager.rs
src/ui/: flex_box.rs  img.rs  mod.rs  progress_bar.rs
src/ui/flex_button_line/: button.rs  mod.rs
src/ui/text/: font_manager.rs  mod.rs
src/vertex/: mod.rs  simple_vertex.rs  ui_vertex.rs
(+2 files in other folders)
