[package]
name = "placeholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
winit = { version = "0.30", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.4"
futures = "0.3.30"

[build-dependencies]
fs_extra = "1.2"
