[package]
name = "polygon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferride_core = { path = "../ferride_core" }
bytemuck = { version = "1.16.0", features = ["derive"] }
repr-trait = "1.0.0"
threed = { git = "https://github.com/DerGorn/threed.git" }
